--- a/src/main/resources/com/example/botecofx/garcon-consulta-view.fxml
+++ b/src/main/resources/com/example/botecofx/garcon-consulta-view.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.botecofx.GarconConsultaController">
+<VBox minHeight="500.0" minWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.botecofx.GarconConsultaController">
    <children>
       <HBox alignment="CENTER" prefHeight="48.0" prefWidth="200.0" spacing="10.0" style="-fx-background-color: lightgray;">
          <children>
@@ -37,8 +36,8 @@
          <contextMenu>
             <ContextMenu>
               <items>
-                <MenuItem mnemonicParsing="false" text="Alterar" onAction="#onAlterar" />
-                <MenuItem mnemonicParsing="false" text="Excluir" onAction="#onExcluir" />
+                <MenuItem mnemonicParsing="false" onAction="#onAlterar" text="Alterar" />
+                <MenuItem mnemonicParsing="false" onAction="#onExcluir" text="Excluir" />
               </items>
             </ContextMenu>
          </contextMenu>
