--- a/src/main/resources/com/example/botecofx/garcon-form-view.fxml
+++ b/src/main/resources/com/example/botecofx/garcon-form-view.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<GridPane hgap="20.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.botecofx.GarconTableController">
+<GridPane hgap="20.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.botecofx.GarconFormController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" />
@@ -31,7 +31,7 @@
       <VBox alignment="CENTER_LEFT">
          <children>
             <Label text="ID" />
-            <TextField fx:id="tfId" />
+            <TextField fx:id="tfId" editable="false" />
          </children>
       </VBox>
       <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" GridPane.columnSpan="4" GridPane.rowIndex="1">
@@ -49,7 +49,7 @@
       <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="170.0" GridPane.rowIndex="3">
          <children>
             <Label text="CEP" />
-            <TextField fx:id="tfCep" />
+            <TextField fx:id="tfCep" onKeyReleased="#onBuscarCep" />
          </children>
       </VBox>
       <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="238.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
@@ -61,37 +61,37 @@
       <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
          <children>
             <Label text="NÚMERO" />
-            <TextField fx:id="tfNum" />
+            <TextField fx:id="tfNumero" />
          </children>
       </VBox>
       <VBox alignment="CENTER_LEFT" layoutX="453.0" layoutY="238.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
          <children>
             <Label text="CIDADE" />
-            <TextField fx:id="tfNum1" />
+            <TextField fx:id="tfCidade" />
          </children>
       </VBox>
       <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="298.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
          <children>
             <Label text="UF" />
-            <TextField fx:id="tfNum11" />
+            <TextField fx:id="tfUf" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="421.0" layoutY="298.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+      <VBox alignment="CENTER_LEFT" layoutX="421.0" layoutY="298.0" GridPane.columnSpan="3" GridPane.rowIndex="5">
          <children>
-            <Label text="UF" />
-            <TextField fx:id="tfNum111" />
-         </children>
-      </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="350.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
-         <children>
-            <Label text="UF" />
-            <TextField fx:id="tfNum1111" />
+            <Label text="Telefone" />
+            <TextField fx:id="tfFone" />
          </children>
       </VBox>
       <HBox alignment="BOTTOM_RIGHT" spacing="20.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="6">
          <children>
-            <Button minWidth="120.0" mnemonicParsing="false" prefWidth="120.0" text="Confirmar" />
-            <Button minWidth="120.0" mnemonicParsing="false" prefWidth="120.0" text="Cancelar" />
+            <Button fx:id="btConfirmar" minWidth="120.0" mnemonicParsing="false" onAction="#onConfirmar" prefWidth="120.0" style="-fx-background-color: royalblue;" text="Confirmar" textFill="WHITE">
+               <font>
+                  <Font name="Times New Roman Bold Italic" size="14.0" />
+               </font></Button>
+            <Button fx:id="btCancelar" minWidth="120.0" mnemonicParsing="false" onAction="#onCancelar" prefWidth="120.0" style="-fx-background-color: salmon;" text="Cancelar" textFill="WHITE">
+               <font>
+                  <Font name="Times New Roman Bold Italic" size="14.0" />
+               </font></Button>
          </children>
       </HBox>
    </children>
