--- a/src/main/resources/com/example/botecofx/garcon-form-view.fxml
+++ b/src/main/resources/com/example/botecofx/garcon-form-view.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -11,89 +13,100 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="20.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.botecofx.GarconFormController">
+<GridPane hgap="20.0" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.botecofx.GarconFormController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <VBox alignment="CENTER_LEFT">
+      <VBox alignment="CENTER_LEFT" prefHeight="63.0" prefWidth="152.0">
          <children>
             <Label text="ID" />
-            <TextField fx:id="tfId" editable="false" />
+            <TextField fx:id="tfId" editable="false" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" GridPane.columnSpan="4" GridPane.rowIndex="1">
+      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnSpan="4" GridPane.rowIndex="1">
          <children>
             <Label text="NOME" />
-            <TextField fx:id="tfNome" />
+            <TextField fx:id="tfNome" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="94.0" GridPane.columnSpan="4" GridPane.rowIndex="2">
+      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="73.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnSpan="4" GridPane.rowIndex="2">
          <children>
             <Label text="CPF" />
-            <TextField fx:id="tfCpf" />
+            <TextField fx:id="tfCpf" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="170.0" GridPane.rowIndex="3">
+      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="136.0" prefHeight="63.0" prefWidth="152.0" GridPane.rowIndex="3">
          <children>
             <Label text="CEP" />
-            <TextField fx:id="tfCep" onKeyReleased="#onBuscarCep" />
+            <TextField fx:id="tfCep" onKeyReleased="#onBuscarCep" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="238.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
+      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="262.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
          <children>
-            <Label text="ENDEREÇO (RUA/AVENIDA)" />
-            <TextField fx:id="tfEndereco" />
+            <Label text="RUA/AVENIDA" />
+            <TextField fx:id="tfEndereco" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
+      <VBox alignment="CENTER_LEFT" layoutX="244.0" layoutY="262.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
          <children>
             <Label text="NÚMERO" />
-            <TextField fx:id="tfNumero" />
+            <TextField fx:id="tfNumero" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="453.0" layoutY="238.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
+      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="199.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
          <children>
             <Label text="CIDADE" />
-            <TextField fx:id="tfCidade" />
+            <TextField fx:id="tfCidade" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="298.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
+      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="262.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
          <children>
             <Label text="UF" />
-            <TextField fx:id="tfUf" />
+            <TextField fx:id="tfUf" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="421.0" layoutY="298.0" GridPane.columnSpan="3" GridPane.rowIndex="5">
+      <VBox alignment="CENTER_LEFT" layoutX="419.0" layoutY="262.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnSpan="3" GridPane.rowIndex="5">
          <children>
             <Label text="Telefone" />
-            <TextField fx:id="tfFone" />
+            <TextField fx:id="tfFone" prefHeight="25.0" prefWidth="177.0" />
          </children>
       </VBox>
-      <HBox alignment="BOTTOM_RIGHT" spacing="20.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="6">
+      <VBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="324.0" prefHeight="63.0" prefWidth="152.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <HBox alignment="CENTER" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" spacing="48.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="6">
          <children>
-            <Button fx:id="btConfirmar" minWidth="120.0" mnemonicParsing="false" onAction="#onConfirmar" prefWidth="120.0" style="-fx-background-color: royalblue;" text="Confirmar" textFill="WHITE">
+            <Button fx:id="btConfirmar" mnemonicParsing="false" onAction="#onConfirmar" prefWidth="120.0" style="-fx-background-color: royalblue;" text="Confirmar" textFill="WHITE">
                <font>
-                  <Font name="Times New Roman Bold Italic" size="14.0" />
+                  <Font name="System Bold" size="14.0" />
                </font></Button>
-            <Button fx:id="btCancelar" minWidth="120.0" mnemonicParsing="false" onAction="#onCancelar" prefWidth="120.0" style="-fx-background-color: salmon;" text="Cancelar" textFill="WHITE">
+            <Button fx:id="btCancelar" mnemonicParsing="false" onAction="#onCancelar" prefWidth="120.0" style="-fx-background-color: salmon;" text="Cancelar" textFill="WHITE">
                <font>
-                  <Font name="Times New Roman Bold Italic" size="14.0" />
+                  <Font name="System Bold" size="14.0" />
                </font></Button>
          </children>
       </HBox>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowSpan="7">
+         <children>
+            <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" onMouseClicked="#onBuscarImagem" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@no-foto.png" />
+               </image>
+            </ImageView>
+         </children>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
